2004-06-12 Colin McCormack <colin@chinix.com>
	* htdoc/access/htman.tml - updated documentation

2004-06-11 Colin McCormack <colin@chinix.com>
	* lib/{auth,digest}.tcl: fixed Digest authentication bug
	* htdocs/htaccess/*: improved /htaccess tool
	* lib/thread.tcl: Fixed sf [ 964179 ] error in proc:Thread_IsFree

2004-05-28 Brent Welch <welch@panasas.com>
        * CVS tag tclhttpd-3-5-1 for the 3.5.1 release

2004-05-28 Brent Welch <welch@panasas.com>
        * htdocs/learn/* - various doc updates
        * DIST_build/Makefile.boot
        * DIST_build/DIST
        Updates to use a pre-packaged thread-2.5.2 release because I'm
        having build/autoconf troubles with CVS HOL (thread 2.6)

2004-05-27 Colin McCormack <colin@chinix.com>
	* lib/utils.tcl
	* lib/digest.tcl
	* lib/session.tcl
	changed all the md5 refs to a utils.tcl defined
	version-appropriate alias 'md5hex', this should be future proof
	(and past-proof), since it adapts the interface explicitly.
	Recommend using md5hex explicitly.
	* debian/: updated debian package version ahead of 3.5.1 release
	
2004-05-18 Brent Welch <welch@panasas.com>
        * README
        * VERSION
        * configure.in
        * DIST_build/DIST
        * DIST_build/DIST.exp
        * DIST_build/Makefile.boot
        * DIST_build/README
        * lib/version.tcl
        * bin/httpd.tcl
        Version updates in preparation for a 3.5.1 release
        (3.5.0 remained unreleased)

2004-05-18 Brent Welch <welch@panasas.com>
        * bin/http.tcl: Added 'package require md5 1' to startup
        because of conflicts internal to Tcllib 1.6 between
        md5 1.4.3 and md5 2.0.0.

2004-05-18 Brent Welch <welch@panasas.com>
        * lib/mail.tcl: fixed startup so it works with a
        vanilla server.

2004-05-18 Brent Welch <welch@panasas.com>
        * lib/doc.tcl: added [file normalize] to Doc_Handle to
        avoid returning file contents for files whos name
        ends with extra trailing "." characters.
